--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "vite-plugin-pug": "^0.4.1"
+  },
+  "dependencies": {
+    "express": "^5.1.0",
+    "flatpickr": "^4.6.13"
   }
 }
